# apcm

./: .gitignore  symmetric_ciphers.md  symmetric_ciphers.typ
exercises-rs/: Cargo.toml
exercises-rs/rc4/src/: lib.rs
exercises-rs/src/: last_slice_of_light.rs  main.rs  sha3.rs
exercises-rs/vault/: wall.txt
exercises/antechamber/: authentic.typ  confidential.typ  outsourced.typ  unitn_cover.typ
exercises/bleichenbacher/: Cargo.toml  res.py
exercises/bleichenbacher/src/: attack.rs  bytes.rs  lib.rs  main.rs  rsa.rs  utils.rs
exercises/chacha20/: Cargo.toml
exercises/chacha20/src/: chacha.rs  chacha20.rs  lib.rs
exercises/forge/: authentic.typ  confidential.typ  outsourced.typ  references.yml  unitn_cover.typ
exercises/mirror/report/: lib.typ  main.typ  refs.yml
exercises/mirror/results/: 2025-10-29_134509.html  full.html  mitzvah_nomore.html
exercises/mirror/server/: Dockerfile  Dockerfile.old  nginx.conf  openssl.cnf  server.crt  server.key
exercises/ocb/src/: AES.java  OCB_AES.java
exercises/pduel/: Cargo.toml
exercises/pduel/src/: eddsa.rs  main.rs  utils.rs
exercises/rc4/src/: attacks.rs  lib.rs  rc4.rs
exercises/sha3/: Cargo.toml
exercises/sha3/src/: lib.rs  main.rs  sha3.rs
exercises/src/: CurseOfHex.java
exercises/vault/: Cargo.toml
exercises/vault/src/: lib.rs  vault.rs
lessons-code/src/: DES.java  MerkleDamgardHash.java  Salsa20.java
notes/: asymmetric.typ  hashing.typ  main.typ  symmetric.typ
rc4/: Cargo.toml
rc4/src/: attacks.rs  lib.rs  rc4.rs
sha3/: Cargo.toml
sha3/src/: lib.rs  sha3.rs
(+2 files in other folders)
