[package]
name = "bleichenbacher"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"
num-bigint = "0.4.6"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rsa = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
