[package]
name = "bleichenbacher"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"
indicatif = { version = "0.18.2", features = ["rayon"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
