[package]
name = "pduel"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayref = "0.3.9"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
hex-literal = "1.1.0"
itertools = "0.14.0"
rand = "0.9.2"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
hex = "0.4.3"
